--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,29 +15,29 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
-# find dependencies
-find_package(ament_cmake REQUIRED)
-# uncomment the following section in order to fill in
-# further dependencies manually.
-# find_package(<dependency> REQUIRED)
 
-add_executable(copto_mix_node src/copto_mix_node.cpp)
-target_include_directories(copto_mix_node PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-  $<INSTALL_INTERFACE:include>)
 
-install(TARGETS copto_mix_node
-  DESTINATION lib/${PROJECT_NAME})
+find_package(ament_cmake_auto REQUIRED)
+ament_auto_find_build_dependencies()
+
+ament_auto_add_library(mix_component SHARED
+ src/mix_component.cpp)
+
+target_compile_definitions(
+  mix_component
+  PRIVATE "COPTO_MIX_MIX_COMPONENT_BUILDING_DLL"
+)
+
+rclcpp_components_register_nodes(
+  mix_component "copto_mix::PIDComponent"
+)
+
+ament_auto_add_exacutable(copto_mix src/copto_mix_node.cpp)
+
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
-  # the following line skips the linter which checks for copyrights
-  # uncomment the line when a copyright and license is not present in all source files
-  #set(ament_cmake_copyright_FOUND TRUE)
-  # the following line skips cpplint (only works in a git repo)
-  # uncomment the line when this package is not in a git repo
-  #set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
 
-ament_package()
+ament_auto_package()
