--- a/package.xml
+++ b/package.xml
@@ -8,10 +8,20 @@
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_cmake_auto</buildtool_depend>
 
-  <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_lint_common</test_depend>
+  <build_depend>rclcpp</build_depend>
+  <build_depend>rclcpp_components</build_depend>
+  <build_depend>Eigen3</build_depend>
 
+  <build_export_depend>rclcpp</build_export_depend>
+  <build_export_depend>rclcpp_components</build_export_depend>
+  <build_export_depend>Eigen3</build_export_depend>
+
+  <exec_depend>rclcpp</exec_depend>
+  <exec_depend>rclcpp_components</exec_depend>
+  <exec_depend>Eigen3</exec_depend>
+  
   <export>
     <build_type>ament_cmake</build_type>
   </export>
