--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,8 +25,6 @@ include_directories(include ${EIGEN3_INCLUDE_DIR})
 ament_auto_add_library(mix_component SHARED
  src/mix_component.cpp)
 
-
-
 target_compile_definitions(
   mix_component
   PRIVATE "COPTO_MIX_MIX_COMPONENT_BUILDING_DLL"
@@ -37,6 +35,17 @@ rclcpp_components_register_nodes(
 )
 
 ament_auto_add_executable(copto_mix_node src/copto_mix_node.cpp)
+
+install(TARGETS
+  copto_mix_node
+  DESTINATION lib/copto_mix
+)
+
+install(
+  DIRECTORY "include/"
+  DESTINATION include
+)
+
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
